--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <img class="block" id="u344_img" src="images/a_a.png?crc=332464874" alt="" data-heightwidthratio="0.8256880733944955" data-image-width="218" data-image-height="180"/>
    </div>
    <div class="grpelem" id="u421"><!-- custom html -->
-    	<!--listen2myradio.com SHOUTcast Flash Player-->
-	<p id='preview'></p><script id='myscript' language='javascript' src='http://flashplayer.listen2myradio.com/getInfo.js?id=290788c34e66fd334954f42e0c1eabccc876'></script>
-	<!--End Player-->
+    <audio autoplay controls><source src="http://5.133.182.174:8406/;.mp3/;stream.nsv" type="audio/mpeg"></source>
+
 
    </div>
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="681" data-content-below-spacer="681" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
