--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(a,b,c){var d=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var f=a[b]+"MaxTouchPoints";if(f in navigator&&navigator[f])return!0}try{return document.createEvent("TouchEvent"),!0}catch(d){}return!1}(),g=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var f=b[c];f.charAt(0)==" ";)f=f.substring(1,f.length);if(f.indexOf(a)==
+0)return f.substring(a.length,f.length)}return null};if(g("inbrowserediting")!="true"){var f,g=g("devicelock");g=="phone"&&c?f=c:g=="tablet"&&b&&(f=b);if(g!=a&&!f)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&c?f=c:window.matchMedia("(max-device-width: 960px)").matches&&b&&d&&(f=b);else{var a=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),g=window.screen.systemXDPI||0,i=window.screen.systemYDPI||0,g=g>0&&i>0?Math.min(screen.width/g,screen.height/i):
+0;(a<=370||g!=0&&g<=3)&&c?f=c:a<=960&&b&&d&&(f=b)}if(f)document.location=f+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/index.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://alexander433.com/phone/index.html"/>
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=271571920"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=118473778" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=383454261"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=427620238" id="pagesheet"/>
     <!--HTML Widget code-->
   <style type="text/css">#u167.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
  </head>
@@ -26,22 +32,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="clip_frame grpelem" id="u110" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image -->
-    <img class="block" id="u110_img" src="images/r-crop-u110.jpg?crc=4062650259" alt="" data-heightwidthratio="0.5678601165695254" data-image-width="1201" data-image-height="682"/>
+    <img class="block" id="u110_img" src="images/r-crop-u110.png?crc=4022284638" alt="" data-heightwidthratio="0.5678601165695254" data-image-width="1201" data-image-height="682"/>
    </div>
-   <a class="nonblock nontext size_fluid_width_height grpelem" id="u167" href="https://youtu.be/zLMjeWuO4k0" data-pintopage="page_fluidx" data-sizePolicy="fluidWidthHeight"><!-- custom html --><div class="fluid_height_spacer"></div> 
-<iframe class="actAsDiv" style="width:100%;height:100%;" src="//www.youtube.com/embed/zLMjeWuO4k0?autoplay=1&loop=1&playlist=zLMjeWuO4k0&showinfo=0&theme=light&color=red&controls=1&modestbranding=0&start=0&fs=0&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
+   <a class="nonblock nontext clip_frame grpelem" id="u194" href="https://www.instagram.com/alexander433rd/"><!-- image --><img class="block" id="u194_img" src="images/07f0d7b69ef071571e4ada2f4d6a053a--cono-de-instagram-colorido-by-vexels.png?crc=178861434" alt="" data-heightwidthratio="0.9918032786885246" data-image-width="122" data-image-height="121"/></a>
+   <a class="nonblock nontext size_fluid_width_height grpelem" id="u167" href="https://youtu.be/zLMjeWuO4k0" data-pintopage="page_fluidx" data-sizePolicy="fluidWidthHeight"><!-- custom html --><div class="fluid_height_spacer"></div>
+<iframe class="actAsDiv" style="width:100%;height:100%;" src="//www.youtube.com/embed/zLMjeWuO4k0?autoplay=1&loop=0&showinfo=0&theme=light&color=red&controls=1&modestbranding=0&start=0&fs=0&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
 </a>
-   <a class="nonblock nontext clip_frame grpelem" id="u172" href="https://www.facebook.com/Alexander433-Riddim-Dubstep-159784248203781"><!-- image --><img class="block" id="u172_img" src="images/logotipo-oficial-facebook-2014.png?crc=4058331290" alt="" data-heightwidthratio="1" data-image-width="90" data-image-height="90"/></a>
-   <a class="nonblock nontext clip_frame grpelem" id="u182" href="https://soundcloud.com/alexander433promotions"><!-- image --><img class="block" id="u182_img" src="images/soundcloud_socialnetwork_17421.png?crc=77056094" alt="" data-heightwidthratio="1" data-image-width="97" data-image-height="97"/></a>
-   <a class="nonblock nontext clip_frame grpelem" id="u194" href="https://www.instagram.com/alexander433rd/"><!-- image --><img class="block" id="u194_img" src="images/07f0d7b69ef071571e4ada2f4d6a053a--cono-de-instagram-colorido-by-vexels.png?crc=340216683" alt="" data-heightwidthratio="0.990990990990991" data-image-width="111" data-image-height="110"/></a>
-   <a class="nonblock nontext clip_frame grpelem" id="u216" href="https://www.youtube.com/channel/UC23XiD6IvlYyIdQIenlrIlA?view_as=subscriber"><!-- image --><img class="block" id="u216_img" src="images/youtube_play_buttonsvg_.png?crc=262527416" alt="" data-heightwidthratio="1" data-image-width="107" data-image-height="107"/></a>
-   <div class="clip_frame grpelem" id="u344"><!-- image -->
-    <img class="block" id="u344_img" src="images/a_a.png?crc=332464874" alt="" data-heightwidthratio="0.8256880733944955" data-image-width="218" data-image-height="180"/>
-   </div>
-   <div class="grpelem" id="u421"><!-- custom html -->
+   <a class="nonblock nontext clip_frame grpelem" id="u172" href="https://www.facebook.com/Alexander433-Riddim-Dubstep-159784248203781"><!-- image --><img class="block" id="u172_img" src="images/logotipo-oficial-facebook-2014.png?crc=252909582" alt="" data-heightwidthratio="1" data-image-width="90" data-image-height="90"/></a>
+   <a class="nonblock nontext clip_frame grpelem" id="u182" href="https://soundcloud.com/alexander433promotions"><!-- image --><img class="block" id="u182_img" src="images/soundcloud_socialnetwork_17421.png?crc=4177482826" alt="" data-heightwidthratio="1" data-image-width="96" data-image-height="96"/></a>
+   <a class="nonblock nontext clip_frame grpelem" id="u216" href="https://www.youtube.com/channel/UC23XiD6IvlYyIdQIenlrIlA?view_as=subscriber"><!-- image --><img class="block" id="u216_img" src="images/youtube_play_buttonsvg_.png?crc=4190676615" alt="" data-heightwidthratio="1" data-image-width="101" data-image-height="101"/></a>
+   <div class="grpelem" id="u695"><!-- custom html -->
     <audio autoplay controls><source src="http://5.133.182.174:8406/;.mp3/;stream.nsv" type="audio/mpeg"></source>
-
-
+   </div>
+   <div class="clip_frame grpelem" id="u700"><!-- image -->
+    <img class="block" id="u700_img" src="images/planeta_tierra.png?crc=444120675" alt="" data-heightwidthratio="1" data-image-width="177" data-image-height="177"/>
+   </div>
+   <img class="grpelem" id="u710-6" alt="Radio Planeta Tierra" src="images/u710-6.png?crc=256125480" data-image-width="433"/><!-- rasterized frame -->
+   <div class="clip_frame grpelem" id="u713"><!-- image -->
+    <img class="block" id="u713_img" src="images/logo.png?crc=210255073" alt="" data-heightwidthratio="0.9158415841584159" data-image-width="202" data-image-height="185"/>
    </div>
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="681" data-content-below-spacer="681" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
