--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=427620238" id="pagesheet"/>
     <!--HTML Widget code-->
   <style type="text/css">#u167.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
-  <link rel="icon" type="image/x-icon" href="css/favicon.ico">
+  <link rel="shortcut icon" href="css/favicon.ico" />
  </head>
  <body>
 
