--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://alexander433.com/phone/index.html"/>
-  <title>Inicio</title>
+  <title>Radio Planeta Tierra</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=383454261"/>
