--- a/phone/index.html
+++ b/phone/index.html
@@ -15,13 +15,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="canonical" href="http://alexander433.com/index.html"/>
-  <title>Inicio</title>
+  <title>Radio Planeta Tierra</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4253169405"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=4055050736" id="pagesheet"/>
     <!--HTML Widget code-->
   <style type="text/css">#u663.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
+  <link rel="shortcut icon" href="css/favicon.ico" />
  </head>
  <body>
 
