--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://alexander433.com/phone/index.html"/>
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://alexander433.com"/>
   <title>Radio Planeta Tierra</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
