--- a/phone/index.html
+++ b/phone/index.html
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       s.src='https://cdn.pushcrew.com/js/fd47abadf597523fd4167f1e0ee4d4e3.js';
       h=u.getElementsByTagName('script')[0];
       h.parentNode.insertBefore(s,h);
-  })(window,document);
+  })(phone,document);
 </script>
  </head>
  <body>
